--- a/Design.css
+++ b/Design.css
@@ -6,7 +6,7 @@
 
 body 
 	{
-		background-image: url(https://images.unsplash.com/photo-1638736276913-6758b82d38be?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1740&q=80);
+		background-image: url(https://media.istockphoto.com/vectors/vintage-diner-vector-id1277180530?k=20&m=1277180530&s=612x612&w=0&h=4Ypav268mBCYBhCgAz9ByArwo6QCrxxYzL-nIO-iAjg=);
 		background-size: cover;
 		background-position: center center;
 		display: flex;
