--- a/Design.css
+++ b/Design.css
@@ -6,7 +6,7 @@
 
 body 
 	{
-		background-image: url(https://media.istockphoto.com/vectors/vintage-diner-vector-id1277180530?k=20&m=1277180530&s=612x612&w=0&h=4Ypav268mBCYBhCgAz9ByArwo6QCrxxYzL-nIO-iAjg=);
+		background-image: url(DinerStockImage.jpeg);
 		background-size: cover;
 		background-position: center center;
 		display: flex;
